Small bio change.

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 						<div class="bioImgContain">
 							<img class="bioImg" src="static/img/d_headshot.jpg" alt="">
 						</div>
-						<span class="sectionBegin">Dustin Maas</span> 
-						<br>electrical engineer PhD.
+						<span class="sectionBegin">Dustin Maas, PhD</span> 
+						<br>electrical engineer, maker
 						<br>
 						<br>
 						<br>
