--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<br>
 						<br>
 						<br>
-						Dustin is an engineer. He loves to build things... and take them apart. He has designed and implemented systems that operate at the intersections of human need and bleeding edge technologies. At CMCW, Dustin is leveraging his hardware and signal processing expertise to help create beautiful and informative interactive data visualizations.</div>
+						Dustin is an engineer. He loves to build things... and take them apart. He has designed and implemented systems that operate at the intersections of human need and bleeding edge technologies. At CMCW, Dustin is leveraging his hardware and signal processing expertise to create beautiful and informative interactive data visualizations.</div>
 				</div>
 				
 				<div class="row bioRow">
