James' bio update.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<br>
 						<br>
 						<br>
-						James' expertise in information and communications technology, fine art, and business development are a perfect fit here. He enjoys collaborating with engineers and developers to bring to life artistic visions that just wouldn't be possible without new technologies, data science, and craftsmanship. He's plied his trade in the EU for several years, and now he's bringing his knowledge and skill-set to CMCW.
+						James' expertise in information and communications technology, fine art, and business development are a perfect fit for the team. He enjoys collaborating with engineers and developers to bring to life artistic visions that just wouldn't be possible without new technologies, data science, and craftsmanship. He's has worked on EU funded research programmes for several years, and now he's bringing his knowledge and skill-set to CMCW.
 					</div>
 					
 					<div class="col-xs-12 col-sm-6 bioTile">
