Another bio update for james.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			
 			<br /><br /><br /><br />
 			
-			<span class="sectionBegin">CMCW makes</span> interactive art that collects and disseminates information in beautiful and useful ways. 
+			<span class="sectionBegin">CMCW makes</span> interactive art that collects and disseminates information in beautiful and useful ways.
 			<br /><br />
 			We offer unique skills and expertise that enable us to concept and build novel data comprehension solutions in literally any medium. Basically we make real-world things that talk to computers, that are useful and beautiful.    
 			<br />{PROBABLY GET RID OF THIS LINE} We are currently in a prototyping and beta testing phase. For our first test we were tasked with developing and fabricating interactive art pieces to be displayed at Red Sky's annual Summit. Check back for more on that project. 
@@ -84,7 +84,7 @@
 						<br>
 						<br>
 						<br>
-						James' expertise in information and communications technology, fine art, and business development are a perfect fit for the team. He enjoys collaborating with engineers and developers to bring to life artistic visions that just wouldn't be possible without new technologies, data science, and craftsmanship. He's has worked on EU funded research programmes for several years, and now he's bringing his knowledge and skill-set to CMCW.
+						James' expertise in information and communications technology, fine art, and business development are a perfect fit for the team. He enjoys collaborating with engineers and developers to bring to life artistic visions that just wouldn't be possible without new technologies, data science, and craftsmanship. He's worked on EU-funded academic research programmes for several years, and now he's bringing his knowledge and skill-set to CMCW.
 					</div>
 					
 					<div class="col-xs-12 col-sm-6 bioTile">
