tyler's image and James' link

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 						<br>
 						<br>
 						James' expertise in information and communications technology, fine art, and business development are a perfect fit for the team. He enjoys collaborating with engineers and developers to bring to life artistic visions that just wouldn't be possible without new technologies, data science, and craftsmanship. He's worked on EU-funded academic research programmes for several years, and now he's bringing his knowledge and skill-set to CMCW.
-                        You can see more of James' commercial portfolio here.
+                        You can see more of James' commercial portfolio <a href="https://ruarua.myportfolio.com/" target="_blank">here</a>.
 					</div>
 					
 					<div class="col-xs-12 col-sm-6 bioTile">
 						<div class="bioImgContain">
-							<img class="bioImg" src="static/img/YuriGagarin.jpg" alt="">
+							<img class="bioImg" src="static/img/tyler_1.png" alt="">
 						</div>
 						<span class="sectionBegin">Tyler Cook</span> 
 						<br>props designer and builder for TV and film
