email notation change, attempt to avoid spam scrapers

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			
 		</div>
 		<div id="bodySection" class="centered">
-			<b>contact@cmcw.io</b>
+			<b>contact{at}cmcw{dot}io</b>
 			
 			<br /><br /><br /><br />
 			
