--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<br>
 						<br>
 						<br>
-						Brian is a polymath working at the confluence of art and math. In his career as a software developer he has worked on everything from big data projects to video games, highlighting his keen and intuitive understanding of systems. He has been noted for his graphic design and poster art as well as carpentry. He is very excited to be a part of CMCW where he can use all these skill in conjunction. 
+						Brian is a polymath working at the confluence of art and math. In his career as a software developer he has worked on everything from big data projects to video games, highlighting his keen and intuitive understanding of systems. Additionally he has been noted for his graphic design and poster art as well as his carpentry work. He is very excited to be a part of CMCW where he can use all these skill in conjunction. 
 					</div>
 					
 					<div class="col-xs-12 col-sm-6 bioTile">
